# informatics_laboratories_5

./: README.md  pyproject.toml  requirements.txt
appendix/: report.docx
calculator/: __main__.py
