[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
calculator = "calculator.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
